examples/negative/pub_effect/pub_fn_unannotated_effect.kai
# Negative fixture (#511 / pub-effect contract): a `pub fn`
# declares a pure row but its body fires `Stdout` via `print`.
# Per docs/design.md §"effects visible in row types" the typer
# must reject. (Tier 1 / Load-bearing principle 1.)

pub fn greet() : Int = {
  print("hi")
  0
}

fn main() : Unit / Console {
  print(int_to_string(greet()))
}
